# Zephyr

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE.txt  README.md  Zephyr.sln  ZephyrRuntime.vcxproj  _build_cli.bat  build_msvc_hotcold.bat  zephyr_bench.vcxproj  zephyr_cli.vcxproj  zephyr_engine_sample.vcxproj  zephyr_tests.vcxproj
.build/: CMakeCache.txt  Makefile  cmake_install.cmake
.claude/: settings.local.json
.claude/worktrees/quirky-black/: _build.bat
.github/workflows/: deploy.yml
bench/: bench_runner.cpp  bench_runner.hpp  main.cpp
bench/3way/: .gitignore  analysis_prompt.md  build_deps.bat  build_pgo_step3.bat  build_zephyr.bat  build_zephyr_msvc_pgo.bat  build_zephyr_pgo.bat  runner.py
bench/3way/gravity/: CMakeCache.txt  Makefile  cmake_install.cmake
bench/3way/results/: comparison.json
bench/3way/scripts/: array.gravity  array.lua  array.zph  closure.gravity  closure.lua  closure.zph  coroutine.gravity  coroutine.lua  coroutine.zph  entity_update.gravity  entity_update.lua  entity_update.zph  event_dispatch.gravity  event_dispatch.lua  event_dispatch.zph  fib.gravity  fib.lua  fib.zph  loop.gravity  loop.lua  loop.zph  method_dispatch.gravity  method_dispatch.lua  method_dispatch.zph  native_callback.gravity  native_callback.lua  native_callback.zph  string_ops.gravity  string_ops.lua  string_ops.zph  struct.gravity  struct.lua  struct.zph  vector_math.gravity  vector_math.lua  vector_math.zph
bench/results/: cli_latest.json  coroutine_optimized.json  coroutine_optimized2.json  latest.json  latest_smoke.json  latest_smoke_release.json  post_fix_3items.json  post_fix_check2.json  post_fix_vs_v1.json  post_syntax_run1.json  post_syntax_run2.json  post_syntax_run3.json  post_syntax_run4.json  r_addi.json  r_addi_jump_v1.json  r_addi_jump_v2.json  r_addi_v2.json  r_bs_ic_v1.json  r_bs_ic_v2.json  r_cmpi_v2.json  r_load_int.json  r_load_int_v2.json  r_ls_v1.json  r_modi_v1.json  r_si_acj_v1.json  r_si_modi_add_store_v1.json  smoke.json  v1_baseline.json  wave_a_baseline.json  wave_b_baseline.json  wave_c_baseline.json  wave_d_baseline.json  wave_f_baseline.json  wave_h0_final.json  wave_h0_optimized.json  wave_h0_register_vm.json  wave_h_baseline.json  wave_j2_final.json  wave_j2_step0.json  wave_j2_step0_opt.json  (+5 more)
bench/scripts/: hot_check.zph
build-msvc/: CMakeCache.txt  Makefile  cmake_install.cmake
cli/: dap_server.cpp  lsp_server.cpp  main.cpp
docs/: CodebaseReport.md  _sidebar.md  array.md  closure.md  controlflow.md  coroutine.md  current.md  embedding.md  enum.md  func.md  future.md  gc_next_wave_analysis.md  gc_refactor_analysis.md  gc_refactor_impl_plan.md  generics.md  loop.md  match.md  mini_spec.md  module.md  operators.md  package_layout.md  pgo_workload.zph  plan.md  process.md  quickstart.md  stdlib.md  string.md  struct.md  syntax.md  trait.md  types.md  vm-optimization.md
docs/copilot_scripts/: collect_pgo.ps1  coroutine_fix_instructions.md  coroutine_optimize.md  hotfix_instructions.md  profiler_fix_instructions.md  quickwin_instructions.md  run_copilot_44.ps1  run_copilot_coroutine_fix.ps1  run_copilot_e1.ps1  run_copilot_e2.ps1  run_copilot_e2_perf.ps1  run_copilot_hotfix.ps1  run_copilot_profiler_fix.ps1  run_copilot_quickwin.ps1  run_copilot_superinstr.ps1  run_copilot_wave_f.ps1  run_lsp_server.ps1  run_pgo_build.ps1  run_vscode_ext.ps1  run_wave_j.ps1  run_wave_j2.ps1  run_wave_k.ps1  run_wave_l.ps1  run_wave_m.ps1  run_wave_n.ps1  run_wave_o.ps1  run_wave_p.ps1  run_wave_q.ps1  run_wave_r.ps1  run_wave_s.ps1  run_wave_t.ps1  superinstruction_instructions.md  wave_d_15_prompt.md  wave_d_44_prompt.md  wave_d_prompt.md  wave_e1_instructions.md  wave_e2_instructions.md  wave_e2_perf_instructions.md  wave_f_build_fix.md  wave_f_instructions.md  (+20 more)
docs/next_impl/: 00_vm_v2_structure.md  01_component_spec.md  02_file_change_plan.md  03_hot_cold_instruction_split.md  04_dedup_plan.md
editors/vscode-zephyr/: language-configuration.json  package-lock.json  package.json
examples/: arrays.zph  basic_types.zph  closures.zph  engine_demo.zph  event_handling.zph  host_module.zph  if_while.zph  import_main.zph  import_util.zph  loops.zph  match_values.zph  simple_ai.zph  state_machine.zph  structs.zph
include/zephyr/: api.hpp
page/: .gitignore  index.md  package-lock.json  package.json
page/.vitepress/: config.mts
page/advanced/: bindings.md  embedding.md  garbage-collection.md
page/en-us/: index.md
page/introduction/: overview.md  quickstart.md
page/ko-kr/: index.md
page/language/: coroutines.md  declarations.md  functions.md  struct-enum.md  syntax.md  traits.md
page/standard-library/: collections.md  gc-profiler.md  math-string.md
samples/engine_sample/: main.cpp
src/: zephyr.cpp  zephyr_compiler.hpp  zephyr_compiler.inl  zephyr_gc.cpp  zephyr_gc.inl  zephyr_gc_impl.cpp  zephyr_internal.hpp  zephyr_lexer.hpp  zephyr_lexer.inl  zephyr_parser.cpp  zephyr_parser.inl  zephyr_types.hpp  zephyr_types.inl  zephyr_vm_dispatch.c  zephyr_vm_dispatch.h
std/: collections.zph  math.zph  string.zph
tests/: test_common.hpp  test_compiler.cpp  test_corpus.cpp  test_gc.cpp  test_host.cpp  test_lexer.cpp  test_main.cpp  test_perf.cpp  test_vm.cpp  tests.cpp
tests/corpus/: 01_basic_arithmetic.zph  02_string_interpolation.zph  03_optional_chaining.zph  04_pattern_matching.zph  05_coroutine.zph  06_traits.zph  07_generics.zph  08_result_patterns.zph  09_modules.zph  10_forward_refs.zph  11_where_clauses.zph  12_std_json.zph  13_collections.zph  14_iterator.zph  15_result_chaining.zph  16_result_match.zph  17_spill_basic.zph
(+79 files in other folders)
